--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -1,15 +1,14 @@
 ---
-abstract: (Just Another) Programming Tasks Grading System
+abstract: '(Just Another) Programming Tasks Grading System'
 author:
   - 'israel leiva <ilv@cpan.org>'
 build_requires:
-  Cwd: 3.4
   ExtUtils::MakeMaker: 0
 configure_requires:
   ExtUtils::MakeMaker: 0
-dynamic_config: 1
+dynamic_config: 0
 generated_by: 'ExtUtils::MakeMaker version 6.88, CPAN::Meta::Converter version 2.120351'
-license: gpl
+license: open_source
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
@@ -19,7 +18,6 @@ no_index:
     - t
     - inc
 requires:
-  perl: 5.008
   Cwd: 3.4
   File::Copy: 2.14
   File::Spec::Functions: 3.3
